--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -88,5 +88,8 @@ bind + new-window -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
 unbind -
 bind - last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
 
+# auto setup tmux pane configs:
+#bind D source-file /home/markus/mytmux
+
 set -g default-terminal "screen-256color"
 set -g escape-time 10
