use colors generated by tmuxline.vim for tmux startup

--- a/dot/.tmux.conf
+++ b/dot/.tmux.conf
@@ -6,8 +6,6 @@ set -g set-titles on
 #set -g set-titles-string "tmux.#I.#W"
 set-window-option -g mode-keys vi
 
-set -g status-justify centre # left
-
 # I don't use these much, but they're here anyway
 # bind-key a send-prefix
 bind-key C-a last-window
@@ -39,49 +37,6 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-#### COLOUR (Solarized light)
-#### from https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-light.conf
-
-# default statusbar colors
-set-option -g status-bg black #base2
-set-option -g status-fg white
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg white #base00
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg colour23
-set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg white #base2
-set-option -g pane-active-border-fg brightcyan #base1
-
-# message text
-set-option -g message-bg white #base2
-set-option -g message-fg brightred #orange
-
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
-
-# clock
-set-window-option -g clock-mode-colour colour24 #blue
-
-#### END COLOUR (Solarized light)
-
-# show some useful stats but only when tmux is started
-# outside of Xorg, otherwise dwm statusbar shows these already
-# set -g status-right "" # ThG: conflicts with time display
-set -g status-left ""
-if '[ -z "$DISPLAY" ]' 'set -g status-left "[#[fg=green] #H #[default]]"'
-if '[ -z "$DISPLAY" ]' 'set -g status-right "[ #[fg=magenta]#(cat /proc/loadavg | cut -d \" \" -f 1,2,3)#[default] ][ #[fg=cyan,bright]%a %Y-%m-%d %H:%M #[default]]"'
-if '[ -z "$DISPLAY" ]' 'set -g status-right-length 50'
-
 # Maximizing and restoring panes.
 unbind +
 bind + new-window -d -n tmp \; swap-pane -s tmp.0 \; select-window -t tmp
@@ -93,3 +48,32 @@ bind - last-window \; swap-pane -s tmp.0 \; kill-window -t tmp
 
 set -g default-terminal "screen-256color"
 set -g escape-time 10
+
+# This tmux statusbar config was created by tmuxline.vim
+# on Sun, 05 Nov 2017
+
+set -g status-justify "left"
+set -g status "on"
+set -g status-attr "none"
+set -g message-command-bg "colour59"
+set -g status-left-length "100"
+set -g pane-active-border-fg "colour71"
+set -g status-bg "colour0"
+set -g message-command-fg "colour188"
+set -g pane-border-fg "colour59"
+set -g message-bg "colour59"
+set -g status-left-attr "none"
+set -g status-right-attr "none"
+set -g status-right-length "100"
+set -g message-fg "colour188"
+setw -g window-status-fg "colour130"
+setw -g window-status-attr "none"
+setw -g window-status-activity-bg "colour0"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-fg "colour71"
+setw -g window-status-separator ""
+setw -g window-status-bg "colour0"
+set -g status-left "#[fg=colour0,bg=colour71] #S #[fg=colour71,bg=colour0,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=colour59,bg=colour0,nobold,nounderscore,noitalics]#[fg=colour188,bg=colour59] %Y-%m-%d  %H:%M #[fg=colour71,bg=colour59,nobold,nounderscore,noitalics]#[fg=colour0,bg=colour71] #h "
+setw -g window-status-format "#[fg=colour130,bg=colour0] #I #[fg=colour130,bg=colour0] #W "
+setw -g window-status-current-format "#[fg=colour0,bg=colour59,nobold,nounderscore,noitalics]#[fg=colour188,bg=colour59] #I #[fg=colour188,bg=colour59] #W #[fg=colour59,bg=colour0,nobold,nounderscore,noitalics]"
